RESOLVED FIXED307608
[block-in-inline] Incorrect inline content position when float and margin are present
https://bugs.webkit.org/show_bug.cgi?id=307608
Summary [block-in-inline] Incorrect inline content position when float and margin are...
alan
Reported 2026-02-11 16:48:52 PST
ssia
Attachments
Patch (6.74 KB, patch)
2026-02-11 16:54 PST, alan
no flags
Patch (7.21 KB, patch)
2026-02-11 19:59 PST, alan
no flags
[fast-cq]Patch (7.83 KB, patch)
2026-02-12 09:34 PST, alan
no flags
alan
Comment 1 2026-02-11 16:54:01 PST
alan
Comment 2 2026-02-11 19:59:08 PST
alan
Comment 3 2026-02-12 09:34:40 PST
Created attachment 478329 [details] [fast-cq]Patch
EWS
Comment 4 2026-02-12 13:31:00 PST
Committed 307393@main (1f762c715f3c): <https://commits.webkit.org/307393@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478329 [details].
Radar WebKit Bug Importer
Comment 5 2026-02-12 13:31:13 PST
Note You need to log in before you can comment on or make changes to this bug.